fontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ictlab-frontend-deploy
  labels:
    app: ictlab-frontend
  annotations:
spec:
  selector:
    matchLabels:
      app: ictlab-frontend
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: ictlab-frontend
    spec:
      containers:
      - name: ictlab-frontend
        image: vking34/ictlab-frontend:39a584a
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "512Mi"
            cpu: "150m"
