fontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ictlab-server
spec:
    type: NodePort
    selector:
        app: ictlab-server
    ports:
        - port: 80
          targetPort: 80
          protocol: TCP
