fontend/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    configuration.konghq.com: strip-path
  name: ictlab-frontend-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: ictlab-frontend
          servicePort: 80
